Update headings and paragraphs in index.html

--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
         <main>
             <div class="tab-content active" data-tab-content="frontburner">
                 <div class="hero">
-                    <h1>Active <span class="gradient-text">Explorations</span></h1>
-                    <p>Mental energy currently in high-demand.</p>
+                    <h1>Active <span class="gradient-text">Heat</span></h1>
+                    <p>What's capturing my attention.</p>
                 </div>
                 <div class="masonry-grid" id="frontburnerGrid"></div>
             </div>
@@ -351,15 +351,15 @@
             <div class="tab-content" data-tab-content="backburner">
                 <div class="hero">
                     <h1>Simmering <span class="gradient-text">Lessons</span></h1>
-                    <p>Background processing and steady evolution.</p>
+                    <p>Reinforcing ideas over time.</p>
                 </div>
                 <div class="masonry-grid" id="backburnerGrid"></div>
             </div>
 
             <div class="tab-content" data-tab-content="cold-storage">
                 <div class="hero">
-                    <h1>Preserved <span class="gradient-text">Insights</span></h1>
-                    <p>Archived patterns for future retrieval.</p>
+                    <h1>Committing to <span class="gradient-text">Memory</span></h1>
+                    <p>Frozen patterns for future retrieval.</p>
                 </div>
                 <div class="masonry-grid" id="coldStorageGrid"></div>
             </div>
@@ -367,7 +367,7 @@
             <div class="tab-content" data-tab-content="questions">
                 <div class="hero">
                     <h1>Open <span class="gradient-text">Inquiry</span></h1>
-                    <p>Genuinely curious, seeking clarity.</p>
+                    <p>Conversation starters.</p>
                 </div>
                 <div class="masonry-grid" id="questionsGrid"></div>
             </div>
