Updates to questions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </main>
 
         <footer class="footer">
-            <p>Architecting systems for 2027 & beyond.</p>
+            <p>Always learning.</p>
             <div style="margin-top: 0.5rem;">
                 <a href="mailto:saahithi.budharaju@kellogg.northwestern.edu">Email</a> • 
                 <a href="https://linkedin.com/in/sbudharaju" target="_blank">LinkedIn</a>
