--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="nav-tab active" onclick="switchTab('frontburner')">front burner</div>
                     <div class="nav-tab" onclick="switchTab('backburner')">back burner</div>
                     <div class="nav-tab" onclick="switchTab('portfolio')">portfolio</div>
-                    <div class="nav-tab" onclick="switchTab('questions')">wild ideas</div>
+                    <div class="nav-tab" onclick="switchTab('thoughts')">thoughts</div>
                 </nav>
 
                 <button class="theme-btn" id="themeToggle" aria-label="Toggle Theme">
